# tiny-markdown-server

./: .gitignore  README.md  build_app.bat  main.py  pyproject.toml  requirements.txt
tests/: test_tiny_markdown_server.py
tiny_markdown_server/: tiny_markdown_gui.py  tiny_markdown_server.py
