[tool.poetry]
name = "tiny-markdown-server"
version = "0.1.0"
description = ""
authors = ["David Tillemans <davidtillemans@cryptable.org>"]

[tool.poetry.scripts]
tiny-markdown-server = "tiny_markdown_server.tiny_markdown_server:main"

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
